Fix display on IE

--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -18,7 +18,6 @@
     &__content {
         width: 80%;
         max-width: 960px;
-        margin: 0 auto;
         color: #004d63;
     }
 
